--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ body {
 	overflow-x: hidden;
 }
 
+/* removing links underlining */
+a {
+	text-decoration: none;
+}
+
 /* header settings */
 header {
 	display: flex;
@@ -31,6 +36,7 @@ header h2 {
 /* logo settings */
 #logo {
 	color: white;
+	font-size: 2.5rem;
 }
 
 .search-form {
@@ -51,4 +57,6 @@ header h2 {
 	padding: 0.5rem;
 	border: none;
 	background: rgb(211, 65, 65);
+	color: whitesmoke;
+	cursor: pointer;
 }
